--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,18 @@
 #    pip-compile
 #
 click==7.0                # via pip-tools
+cycler==0.10.0            # via matplotlib
 joblib==0.13.2            # via scikit-learn
+kiwisolver==1.1.0         # via matplotlib
+matplotlib==3.1.1
 nltk==3.4.5
 numpy==1.17.2
 pip-tools==4.1.0
+pyparsing==2.4.2          # via matplotlib
+python-dateutil==2.8.0    # via matplotlib
 scikit-learn==0.21.3
 scipy==1.3.1
-six==1.12.0               # via nltk, pip-tools
+six==1.12.0               # via cycler, nltk, pip-tools, python-dateutil
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools==41.2.0        # via kiwisolver
