--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,33 @@
 #
 #    pip-compile
 #
+appnope==0.1.0            # via ipython
+backcall==0.1.0           # via ipython
 click==7.0                # via pip-tools
 cycler==0.10.0            # via matplotlib
+decorator==4.4.0          # via ipython, traitlets
+ipython-genutils==0.2.0   # via traitlets
+ipython==7.8.0
+jedi==0.15.1              # via ipython
 joblib==0.13.2            # via scikit-learn
 kiwisolver==1.1.0         # via matplotlib
 matplotlib==3.1.1
 nltk==3.4.5
 numpy==1.17.2
+parso==0.5.1              # via jedi
+pexpect==4.7.0            # via ipython
+pickleshare==0.7.5        # via ipython
 pip-tools==4.1.0
+prompt-toolkit==2.0.10    # via ipython
+ptyprocess==0.6.0         # via pexpect
+pygments==2.4.2           # via ipython
 pyparsing==2.4.2          # via matplotlib
 python-dateutil==2.8.0    # via matplotlib
 scikit-learn==0.21.3
 scipy==1.3.1
-six==1.12.0               # via cycler, nltk, pip-tools, python-dateutil
+six==1.12.0               # via cycler, nltk, pip-tools, prompt-toolkit, python-dateutil, traitlets
+traitlets==4.3.3          # via ipython
+wcwidth==0.1.7            # via prompt-toolkit
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.2.0        # via kiwisolver
+# setuptools==41.4.0        # via ipython, kiwisolver
