--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ numpy==1.17.2
 parso==0.5.1              # via jedi
 pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
+pillow==6.2.0
 pip-tools==4.1.0
 prompt-toolkit==2.0.10    # via ipython
 ptyprocess==0.6.0         # via pexpect
