--- a/requirements.txt
+++ b/requirements.txt
@@ -4,34 +4,60 @@
 #
 #    pip-compile
 #
-appnope==0.1.0            # via ipython
+appnope==0.1.0            # via ipykernel, ipython
+attrs==19.3.0             # via jsonschema
 backcall==0.1.0           # via ipython
+bleach==3.1.0             # via nbconvert
 click==7.0                # via pip-tools
 cycler==0.10.0            # via matplotlib
 decorator==4.4.0          # via ipython, traitlets
-ipython-genutils==0.2.0   # via traitlets
+defusedxml==0.6.0         # via nbconvert
+entrypoints==0.3          # via nbconvert
+importlib-metadata==0.23  # via jsonschema
+ipykernel==5.1.3          # via notebook
+ipython-genutils==0.2.0   # via nbformat, notebook, traitlets
 ipython==7.8.0
 jedi==0.15.1              # via ipython
+jinja2==2.10.3            # via nbconvert, notebook
 joblib==0.13.2            # via scikit-learn
+jsonschema==3.1.1         # via nbformat
+jupyter-client==5.3.4     # via ipykernel, notebook
+jupyter-core==4.6.0       # via jupyter-client, nbconvert, nbformat, notebook
 kiwisolver==1.1.0         # via matplotlib
+markupsafe==1.1.1         # via jinja2
 matplotlib==3.1.1
+mistune==0.8.4            # via nbconvert
+more-itertools==7.2.0     # via zipp
+nbconvert==5.6.0          # via notebook
+nbformat==4.4.0           # via nbconvert, notebook
 nltk==3.4.5
+notebook==6.0.1
 numpy==1.17.2
+pandocfilters==1.4.2      # via nbconvert
 parso==0.5.1              # via jedi
 pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==6.2.0
 pip-tools==4.1.0
+prometheus-client==0.7.1  # via notebook
 prompt-toolkit==2.0.10    # via ipython
-ptyprocess==0.6.0         # via pexpect
-pygments==2.4.2           # via ipython
+ptyprocess==0.6.0         # via pexpect, terminado
+pygments==2.4.2           # via ipython, nbconvert
 pyparsing==2.4.2          # via matplotlib
-python-dateutil==2.8.0    # via matplotlib
+pyrsistent==0.15.4        # via jsonschema
+python-dateutil==2.8.0    # via jupyter-client, matplotlib
+pyzmq==18.1.0             # via jupyter-client, notebook
 scikit-learn==0.21.3
 scipy==1.3.1
-six==1.12.0               # via cycler, nltk, pip-tools, prompt-toolkit, python-dateutil, traitlets
-traitlets==4.3.3          # via ipython
+send2trash==1.5.0         # via notebook
+six==1.12.0               # via bleach, cycler, jsonschema, nltk, pip-tools, prompt-toolkit, pyrsistent, python-dateutil, traitlets
+terminado==0.8.2          # via notebook
+testpath==0.4.2           # via nbconvert
+tornado==6.0.3            # via ipykernel, jupyter-client, notebook, terminado
+traitlets==4.3.3          # via ipykernel, ipython, jupyter-client, jupyter-core, nbconvert, nbformat, notebook
 wcwidth==0.1.7            # via prompt-toolkit
+webencodings==0.5.1       # via bleach
+zipp==0.6.0               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.4.0        # via ipython, kiwisolver
+# setuptools==41.4.0        # via ipython, jsonschema, kiwisolver
